--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-mdx-frontmatter": "^4.0.0",
     "seedrandom": "^3.0.5",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
