--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "rehype-pretty-code": "^0.10.2",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
     "seedrandom": "^3.0.5",
+    "shiki": "^0.14.5",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
