--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
+    "**/*.mdx",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
