--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "remark-gfm": "^4.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
     "seedrandom": "^3.0.5",
+    "sharp": "^0.32.6",
     "shiki": "^0.14.5",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
