--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
-    "@mapbox/rehype-prism": "^0.8.0",
+    "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^13.5.6",
@@ -54,6 +54,7 @@
     "sharp": "^0.32.6",
     "shiki": "^0.14.5",
     "superjson": "^1.13.1",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
