--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "drizzle-orm": "^0.28.5",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.288.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
