--- a/components.json
+++ b/components.json
@@ -11,6 +11,6 @@
   },
   "aliases": {
     "components": "~/app/components",
-    "utils": "~/app/utils/styles"
+    "utils": "~/utils/client/styles"
   }
 }
