--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@formkit/auto-animate": "^0.8.1",
     "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^3.0.0",
@@ -40,10 +42,11 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "drizzle-orm": "^0.28.5",
+    "exifr": "^7.1.3",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.288.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^13.5.4",
+    "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
